crates/supersigil-rust/tests/fixtures/fail/fragmentless_ref.rs
use supersigil_rust::verifies;

#[verifies("req/auth")]
#[test]
fn test_no_fragment() {}

fn main() {}
