crates/supersigil-rust/tests/fixtures/fail/fragmentless_ref.stderr
error: invalid criterion reference "req/auth": expected `document-id#criterion-id`
 --> tests/fixtures/fail/fragmentless_ref.rs:3:12
  |
3 | #[verifies("req/auth")]
  |            ^^^^^^^^^^
